--- a/app/src/main/res/layout/activity_alarm_six.xml
+++ b/app/src/main/res/layout/activity_alarm_six.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@color/attention_action_bar_background"
         app:left_image="@mipmap/back"
-        app:middle_text="六类报警" />
+        app:middle_text="四类报警" />
     <com.magus.pulltorefresh.PullToRefreshListView
         android:id="@+id/attention_detail_list"
         android:layout_width="fill_parent"
