--- a/app/src/main/res/layout/dialog_search6.xml
+++ b/app/src/main/res/layout/dialog_search6.xml
@@ -22,10 +22,30 @@
                 android:gravity="center"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:text="单位列表:" />
+                android:text="企业名称:" />
 
             <Spinner
                 android:id="@+id/attention_detail_name_spinne"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dialog_state"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="设施名称:" />
+
+            <Spinner
+                android:id="@+id/attention_detail_state_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
@@ -54,25 +74,7 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/dialog_state"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="处理状态:" />
-
-            <Spinner
-                android:id="@+id/attention_detail_state_spinner"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-        </LinearLayout>
 
 
         <LinearLayout
