--- a/app/src/main/res/layout/fragment_attention.xml
+++ b/app/src/main/res/layout/fragment_attention.xml
@@ -19,77 +19,33 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/alarm_over"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="20dp"
-            android:gravity="center"
-            android:padding="15dp"
-            android:background="@drawable/chaobiaoyujing" />
-
-        <ImageView
-            android:id="@+id/alarm_total"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:padding="15dp"
-            android:background="@drawable/zonglaingyujing"
-            />
-        <ImageView
             android:id="@+id/alarm_six"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
             android:gravity="center"
             android:padding="15dp"
-            android:background="@drawable/liuleibaojing" />
-
-
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:orientation="horizontal">
+            android:background="@drawable/sileibaojing"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/overview_statistics"
+            android:layout_toStartOf="@+id/overview_statistics"
+            android:layout_marginRight="71dp"
+            android:layout_marginEnd="71dp" />
 
         <ImageView
             android:id="@+id/overview_statistics"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="20dp"
             android:background="@drawable/yichangtongji"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="@color/white"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:id="@+id/overview_grid_check"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/wanggekaohe"
-            android:gravity="center"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:id="@+id/overview_total_monitoring"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:textSize="14sp"
+            android:layout_marginRight="78dp"
+            android:layout_marginEnd="78dp"
+            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/zongliangjiankong"
-            android:gravity="center"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:layout_alignParentEnd="true" />
+
 
     </RelativeLayout>
 
@@ -98,35 +54,35 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/attention_abnormal_report"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/yichangbaogao"
-            android:gravity="center"
-            android:padding="15dp"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
 
         <ImageView
-            android:id="@+id/attention_over_report"
+            android:id="@+id/imageView2"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/chaobiaobaogao"
+            android:background="@drawable/touyuntongji"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:layout_marginRight="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
         <ImageView
-            android:id="@+id/alarm_pic"
+            android:id="@+id/alarm_total"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
             android:gravity="center"
             android:padding="15dp"
-            android:background="@drawable/yidingyi" />
+            android:background="@drawable/shujuchaxun"
+            android:layout_marginRight="68dp"
+            android:layout_marginEnd="68dp"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/imageView2"
+            android:layout_toStartOf="@+id/imageView2" />
+
     </RelativeLayout>
+
 </LinearLayout>
