四类报警，查询完成

--- a/app/src/main/res/layout/dialog_search6.xml
+++ b/app/src/main/res/layout/dialog_search6.xml
@@ -118,9 +118,18 @@
                 android:gravity="center" />
         </LinearLayout>
 
+        <DatePicker
+            android:id="@+id/datePicker1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" />
+
         <Button
             android:id="@+id/attention_detail_submit_btn"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="确定" />
