--- a/app/src/main/res/layout/activity_overview_statistics.xml
+++ b/app/src/main/res/layout/activity_overview_statistics.xml
@@ -63,7 +63,8 @@
                 android:layout_centerHorizontal="true"
                 android:text=""
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="15sp"
+                android:visibility="invisible"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -71,7 +72,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
                 <Button
                     android:id="@+id/chart"
@@ -79,16 +81,19 @@
                     android:layout_height="20dp"
                     android:background="@drawable/button_selected_gray_background"
                     android:text="图"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:visibility="invisible"/>
 
                 <Button
-                    android:visibility="gone"
+                    android:visibility="invisible"
                     android:id="@+id/diagram"
                     android:layout_width="40dp"
                     android:layout_height="20dp"
                     android:background="@drawable/button_selected_gray_background"
                     android:text="表"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+
+                    />
             </LinearLayout>
         </RelativeLayout>
 
@@ -96,7 +101,7 @@
             android:id="@+id/chart_content"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@id/title_layout"></FrameLayout>
+            ></FrameLayout>
 
     </RelativeLayout>
 
