--- a/app/src/main/res/layout/fragment_preview_barchart.xml
+++ b/app/src/main/res/layout/fragment_preview_barchart.xml
@@ -48,17 +48,27 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
         android:clickable="true"
         android:src="@mipmap/arrow_left" />
+
+    <TextView
+        android:id="@+id/chart_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_alignTop="@+id/previous_day"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/after_day"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
         android:clickable="true"
         android:src="@mipmap/arrow_right2" />
