--- a/app/src/main/res/layout/activity_overview_statistics.xml
+++ b/app/src/main/res/layout/activity_overview_statistics.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/home_bg"
     android:orientation="vertical"
-    android:weightSum="2">
+    android:weightSum="3">
     <com.magus.enviroment.ui.CustomActionBar
         android:id="@+id/custom_action_bar"
         android:layout_width="fill_parent"
@@ -102,6 +102,21 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             ></FrameLayout>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:id="@+id/tabday_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            ></FrameLayout>
+
+
 
     </RelativeLayout>
 
