--- a/app/src/main/res/layout/fragment_hi_air_index.xml
+++ b/app/src/main/res/layout/fragment_hi_air_index.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:textSize="35sp"
-            android:text=""
+            android:text="0"
             android:textColor="@color/black"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
